--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "ably": "^1.2.36",
+    "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-dotenv": "^3.4.8",
+    "react-native-safe-area": "^0.5.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-sse": "^1.1.0"
+    "react-native-sse": "^1.1.0",
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
